--- a/layouts/partials/mathjax_support.html
+++ b/layouts/partials/mathjax_support.html
@@ -38,3 +38,5 @@
  };
 </script>
 <script type="text/javascript" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js" id="MathJax-script"></script>
+
+<link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/{{ $.Site.Params.mathjaxStyle }}">
