--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -4,6 +4,15 @@ body {
 h1 {
   font-family: 'Noto Sans JP', sans-serif;
 }
+h2 {
+  font-family: 'Noto Sans JP', sans-serif;
+}
+h3 {
+  font-family: 'Noto Sans JP', sans-serif;
+}
+h4 {
+  font-family: 'Noto Sans JP', sans-serif;
+}
 .list ul li .title {
   font-family: 'Noto Sans JP', sans-serif;
 }
